[package]
authors = ["zheng xin <moulo@126.com>"]
name = "game_pathfinding"
version = "0.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/moulo1982/pathfinding.git"
rust-version = "1.74.1"
categories = ["algorithms"]
description = """
一个寻路库，包含AStar和Recast，目前还在开发阶段
"""

[[example]]
name = "astar"
path = "examples/a_star.rs"

[[test]]
name = "bench"
path = "tests/benchmark.rs"

[[bench]]
name = "bench"
path = "tests/benchmark.rs"

[dependencies]
