[package]
authors = ["zheng xin <moulo@126.com>"]
name = "game_pathfinding"
version = "0.0.5"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/moulo1982/pathfinding.git"
rust-version = "1.74.1"
categories = ["algorithms"]
description = """
一个寻路库，包含AStar和Recast，目前还在开发阶段
"""

[[example]]
name = "astar"
path = "examples/a_star.rs"

[[example]]
name = "recast"
path = "examples/recast.rs"

[dependencies]
lazy_static = "1.4.0"
async_once = "0.2.6"
tokio = { version = "1.35.1", features = ["full"] }
thiserror = "1.0.51"
chrono = "0.4.31"