[package]
authors = ["zheng xin <moulo@126.com>"]
name = "game_pathfinding"
version = "0.0.13"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/moulo1982/pathfinding.git"
rust-version = "1.74.1"
categories = ["algorithms"]
keywords = ["astar", "pathfinding", "game"]
description = """
一个寻路库，包含AStar和Recast，目前还在开发阶段
"""

[profile.dev]
codegen-units = 4
debug = true
incremental = false
opt-level = 0

[profile.release]
lto = true
codegen-units = 16
opt-level = 3
strip = true
incremental = false

[[example]]
name = "astar"
path = "examples/a_star.rs"

[[example]]
name = "recast"
path = "examples/recast.rs"

[dependencies]
lazy_static = "1.4.0"
async_once = "0.2.6"
tokio = { version = "1.35.1", features = ["full"] }
thiserror = "1.0.51"
chrono = "0.4.31"